--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>AirBnb Clone</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #F00;
-            height: 70px;
-            width: 100%;
-        }
-
-        footer {
-            background-color: #0F0;
-            height: 60px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            bottom: 0;
-        }
-    </style>
-</head>
-
-<body>
-    <header></header>
-    <footer>
-        <p>Best School</p>
-    </footer>
-</body>
-
+    <head>
+        <title>AirBnB Clone</title>
+        <style>
+            body {margin: 0; padding: 0;}
+            header{
+                Background-color:#FF0000;
+                height: 70px;
+                width:100%;
+            }
+            footer{
+                Background-color:#00FF00;
+                height:60px;
+                width:100%;
+                position: absolute;
+                bottom:0; text-align:center;
+                line-height:60px
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
