--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
-    <title>AirBnb Clone</title>
-</head>
-
-<body>
-    <header></header>
-    <footer>
-        <p>Best School</p>
-    </footer>
-</body>
-
+    <head>
+        <title>AirBnB Clone</title>
+        <link rel="stylesheet" href="styles/2-common.css">
+        <link rel="stylesheet" href="styles/2-header.css">
+        <link rel="stylesheet" href="styles/2-footer.css">
+    </head>
+    <body>
+        <header>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
