--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>AirBnb Clone</title>
-    <link rel="icon" href="images/icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/3-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <meta charset="UTF-8">
-</head>
-
-<body>
-    <header>
-
-    </header>
-    <footer>
-        <p>Best School</p>
-    </footer>
-</body>
-
+    <head>
+        <title>AirBnB Clone</title>
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="icon" href="images/icon.png">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+            </div>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
